# anno

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  PROBLEMS.md  README.md  deny.toml  eval-sanity-report.md  eval-seed-123.md  eval-seed-42.md  eval-seed-777.md  eval-seed-999.md  justfile
.github/: COMMIT_CHECKLIST.md
.github/workflows/: ci.yml  static-analysis-weekly.yml
.opengrep/rules/: rust-anno-specific.yaml  rust-error-handling.yaml  rust-evaluation-framework.yaml  rust-memory-patterns.yaml  rust-nlp-ml-patterns.yaml  rust-security.yaml
anno/: Cargo.toml
anno-cli/: Cargo.toml
anno-cli/src/: main.rs
anno-core/: Cargo.toml
anno-core/src/: entity.rs  error.rs  graph.rs  grounded.rs  lib.rs
anno/src/: lib.rs  offset.rs
anno/tests/: no_features 2.rs
benches/: evaluation_parallel.rs  evaluation_performance.rs  gliner_eval_profiling.rs  gliner_profiling.rs  ner.rs
coalesce/: Cargo.toml
coalesce/src/: lib.rs  resolver.rs
docs/: ABSTRACT_ANAPHORA_RESEARCH.md  ACCIDENTAL_OPTIMIZATION_OPPORTUNITIES.md  ALL_ENHANCEMENTS_COMPLETE.md  ALL_REFINEMENTS_COMPLETE.md  ALL_REFINEMENTS_FINAL.md  AUDIT_2025.md  BACKEND_INTERFACE_REVIEW.md  BACKWARD_REVIEW.md  BENCHMARK_ANALYSIS.md  BOX_EMBEDDINGS_COREFERENCE.md  BOX_EMBEDDINGS_SUMMARY.md  BOX_EMBEDDINGS_USAGE.md  BOX_ORGANIZATION.md  BUGS_FIXED.md  CI_EVALUATION.md  CI_INTEGRATION_COMPLETE.md  CI_INTEGRATION_STATUS.md  CLI_ARCHITECTURE_REFINEMENT.md  CLI_DESIGN_REFINEMENT.md  CLI_EXPLORATION.md  CLI_GAPS_AND_EXPERIENCE.md  CLI_HARMONIZATION_PLAN.md  CLI_REFINEMENT_SUMMARY.md  CLI_TESTING_COMPLETE.md  CLI_TESTING_RESULTS.md  COMPREHENSIVE_TESTING.md  DATASETS.md  DATASET_DOWNLOADS.md  DATASET_IMPROVEMENTS.md  DEFAULTS_AND_FORGOTTEN_TASKS_REVIEW.md  DESIGN_CRITIQUE.md  DOCS_CLEANUP_ANALYSIS.md  DOCUMENTATION_CRITIQUE.md  DOCUMENT_INGESTION_DESIGN.md  EVALUATION.md  EVALUATION_CRITICAL_REVIEW.md  EVALUATION_CRITIQUE.md  EVAL_ANALYSIS.md  EVAL_CRITIQUE.md  EXPERIENCE_SUMMARY.md  (+65 more)
docs/archive/: BENCHMARK_RESULTS.md  BUGS_FIXED.md  BUGS_FOUND.md  BUGS_FOUND_2025_01.md  BUGS_FOUND_LATEST.md  EVALUATION_DEEP_REVIEW.md  EVALUATION_OPTIMIZATION.md  EVALUATION_PROBLEMS.md  EVALUATION_STATUS.md  EVALUATION_VALIDATION_REVIEW.md  FINAL_STATUS.md  FINDINGS.md  MUTATION_TEST_RESULTS.md  MUTATION_TEST_SETUP.md  MUTATION_TEST_STATUS.md  MUTATION_TEST_SUMMARY.md  PROGRESS.md  REPO_CLEANUP.md  SUBTLE_BUGS_FOUND.md  TASK_SYSTEM_SUMMARY.md  VERIFICATION_RESULTS.md  grounded_analysis.html  task_evaluation_report.md
examples/: 01_quickstart.rs  20_eval_basic.rs  21_eval_coref.rs  40_benchmark_backend.rs  41_benchmark_fewnerd.rs  44_benchmark_dataset.rs  50_comprehensive_bench.rs  60_advanced_eval.rs  61_full_benchmark.rs  62_model_showcase.rs  63_model_evaluation.rs  64_hybrid_eval.rs  README.md  abstract_anaphora_eval.rs  advanced.rs  benchmark.rs  bert.rs  bert_ner_demo.rs  bias.rs  bias_check.rs  candle.rs  candle_gliner_demo.rs  comprehensive_eval.rs  comprehensive_evaluation.rs  coref.rs  debug_ner.rs  discourse_pipeline.rs  download_datasets.rs  download_models.rs  eval.rs  eval_advanced_features.rs  eval_basic.rs  eval_comparison.rs  eval_coref_analysis.rs  eval_stress_test.rs  extract_dataset_texts.rs  full_benchmark.rs  gliner_candle.rs  hybrid.rs  migrating_to_unified.rs  (+7 more)
hack/: README.md  extract_dataset_texts.rs
scripts/: analyze-evaluation-patterns.sh  benchmark-static-analysis.sh  check-evaluation-invariants.sh  check-historical-bugs.sh  check-ml-backend-patterns.sh  check-nlp-patterns.sh  compare-tool-outputs.sh  convert_pytorch_to_safetensors.py  eval-full.sh  eval-multi-seed.sh  eval-sanity.sh  generate-analysis-dashboard.sh  generate-repo-specific-report.sh  generate-safety-report.sh  generate-unified-report.sh  integrate-with-evaluation.sh  summarize-failures.sh  track-unsafe-code-trends.sh  validate-publish.sh  validate-rules.sh  validate-static-analysis-setup.sh
src/: entity.rs  error.rs  graph.rs  grounded.rs  lang.rs  lib.rs  offset.rs  schema.rs  similarity.rs  sync.rs
src/backends/: ARCHITECTURE.md  box_embeddings_training.rs  candle.rs  catalog.rs  coref_t5.rs  demonstration.rs  encoder.rs  encoder_candle.rs  extractor.rs  gliner.rs  gliner2.rs  gliner_candle.rs  gliner_onnx.rs  gliner_pipeline.rs  heuristic.rs  hybrid.rs  inference.rs  llm_prompt.rs  mod.rs  nuner.rs  onnx.rs  pattern.rs  pattern_config.rs  regex.rs  router.rs  rule.rs  session_pool.rs  stacked.rs  statistical.rs  tplinker.rs  universal_ner.rs  w2ner.rs
src/cli/: mod.rs  output.rs  parser.rs  utils.rs
src/discourse/: event_extractor.rs  types.rs
src/eval/: ARCHITECTURE.md  TAXONOMY.md  abstract_anaphora.rs  active_learning.rs  advanced_evaluator.rs  advanced_harness.rs  analysis.rs  backend_eval.rs  backend_factory.rs  backend_name.rs  benchmark.rs  bio_adapter.rs  calibration.rs  cdcr.rs  config_builder.rs  coref.rs  coref_loader.rs  coref_metrics.rs  coref_resolver.rs  dataset_comparison.rs  dataset_quality.rs  datasets.rs  demographic_bias.rs  discontinuous.rs  drift.rs  ensemble.rs  error_analysis.rs  evaluator.rs  few_shot.rs  gender_bias.rs  harness.rs  inter_doc_coref.rs  learning_curve.rs  length_bias.rs  (+22 more)
tests/: DIE_HARD_REVIEW.md  advanced_trait_tests.rs  auto_backend_tests.rs  backend_candle.rs  backend_comparison.rs  backend_nuner_w2ner.rs  bug_fixes.rs  cli_ingest_features.rs  cli_integration.rs  cli_new_commands.rs  comprehensive_ner_tests.rs  concurrency_tests.rs  coref_integration.rs  corpus_performance.rs  corpus_proptest.rs  corpus_tests.rs  crossdoc_cli.rs  crossdoc_cli_exec.rs  crossdoc_cli_format.rs  crossdoc_cli_integration.rs  crossdoc_cli_output.rs  crossdoc_cli_proptest.rs  die_hard.rs  discontinuous_span_tests.rs  discourse_comprehensive.rs  domain_specific.rs  e2e_quality_comprehensive.rs  edge_cases.rs  eval_improvements_tests.rs  eval_integration.rs  eval_invariants.rs  eval_progress_reporting.rs  eval_subtle_bugs.rs  evaluator_tests.rs  fuzz_edge_cases.rs  gliner1_tests.rs  gliner2_tests.rs  gliner_candle_bug_tests.rs  gliner_optimization_invariants.rs  graph_export_tests.rs  (+36 more)
(+181 files in other folders)
