[package]
name = "anno"
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
description = "Text annotation: NER, coreference metrics, relation extraction traits"
keywords = ["ner", "nlp", "entity", "extraction", "coreference"]
categories = ["text-processing", "science"]
repository = "https://github.com/arclabs561/anno"
readme = "README.md"
authors = ["Arc <attobop@gmail.com>"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
once_cell = "1"

# Robustness module needs rand (optional, only with eval-advanced)
rand = { version = "0.9", optional = true }

# Networking (optional)
ureq = { version = "2", optional = true }
dirs = { version = "5", optional = true }

# ML backends (optional)
ort = { version = "2.0.0-rc.10", optional = true }
tokenizers = { version = "0.22", optional = true }
hf-hub = { version = "0.4", optional = true }
ndarray = { version = "0.16", optional = true }
candle-core = { version = "0.9", optional = true }
candle-nn = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
# gliner = { version = "0.1", optional = true } # Not yet published to crates.io

[dev-dependencies]
criterion = "0.5"
proptest = "1"
tempfile = "3"
rand = "0.9"

[features]
# Minimal by default - users opt-in to what they need
default = []

# === Evaluation Framework (tiered) ===
# Core evaluation: P/R/F1, GoldEntity, basic metrics
eval = []
# Bias analysis: gender, demographic, temporal, length bias evaluation
eval-bias = ["eval"]
# Advanced analysis: calibration, robustness, OOD, active learning, etc.
eval-advanced = ["eval", "dep:rand"]
# Everything in eval
eval-full = ["eval", "eval-bias", "eval-advanced"]

# === Networking ===
network = ["dep:ureq", "dep:dirs"]

# === ML Backends ===
onnx = ["dep:ort", "dep:tokenizers", "dep:hf-hub", "dep:ndarray"]
candle = ["dep:candle-core", "dep:candle-nn", "dep:candle-transformers", "dep:tokenizers", "dep:hf-hub"]

# GPU acceleration for Candle (opt-in)
metal = ["candle", "candle-core/metal", "candle-nn/metal", "candle-transformers/metal"]
cuda = ["candle", "candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
# gliner = ["dep:gliner", "dep:hf-hub"] # Not yet published

# Everything
full = ["eval-full", "onnx", "candle", "network"]

# =============================================================================
# CLI BINARY
# =============================================================================
[[bin]]
name = "anno-eval"
path = "src/bin/anno_eval.rs"
required-features = ["eval"]

[[bench]]
name = "ner"
harness = false

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"

# =============================================================================
# EXAMPLES with required features
# =============================================================================
# Examples - Run with: cargo run --example <name> --features <required-features>
# =============================================================================

[[example]]
name = "quickstart"
required-features = ["eval"]

[[example]]
name = "bert"
required-features = ["onnx"]

[[example]]
name = "candle"
required-features = ["candle"]

[[example]]
name = "download_models"
required-features = ["network"]

[[example]]
name = "eval"
required-features = ["eval"]

[[example]]
name = "coref"
required-features = ["eval"]

[[example]]
name = "bias"
required-features = ["eval-bias"]

[[example]]
name = "benchmark"
required-features = ["eval-full"]

[[example]]
name = "advanced"
required-features = ["eval"]

[[example]]
name = "models"
required-features = ["onnx"]

[[example]]
name = "hybrid"
required-features = ["onnx"]
