[workspace]
members = [
    "anno-core",
    "anno",
    "coalesce",
    "strata",
    "anno-cli",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
authors = ["Arc <attobop@gmail.com>"]
repository = "https://github.com/arclabs561/anno"
homepage = "https://docs.rs/anno"
documentation = "https://docs.rs/anno"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
once_cell = "1"

# CLI dependencies
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"
is-terminal = "0.4"
glob = "0.3"
indicatif = "0.17"
toml = "0.8"

# Evaluation
rand = "0.9"
ureq = "2"
sha2 = "0.10"
dirs = "5"

# ML backends (not optional in workspace - individual crates can make them optional)
ort = "2.0.0-rc.10"
tokenizers = "0.22"
hf-hub = "0.4"
ndarray = "0.16"
lru = "0.12"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
safetensors = "0.4"

# Async
tokio = { version = "1", features = ["rt", "sync"] }
futures = "0.3"

# Performance
crossbeam-channel = "0.5"
parking_lot = "0.12"
rayon = "1"

# Testing
proptest = "1"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "warn"
